fix: center image in product carousel on mobile devices

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -93,18 +93,21 @@
 
 @media screen and (max-width: 670px) {
     .carousel {
-        width: 220px;
+        width: 280px;
         height: 418px;
         position: absolute;
         top: 10px;
         left: 50%;
         transform: translate(-50%, 0);
         display: flex;
+        padding: 0;
+        justify-content: center;
     }
 
     .carousel-item {
         padding: 0 0 36px;
-        justify-items: center;
+        display: flex;
+        justify-content: center;
     }
     
     .carousel-item__image {
